...
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/layoutRisk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:background="#c20f0f"
            android:orientation="vertical"
            android:paddingTop="19dp"
            android:paddingBottom="19dp">

            <TextView
                android:id="@+id/textRisk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="#faf1f1"
                android:textSize="30dp"
                android:textStyle="bold"
                tools:ignore="SpUsage"
                tools:text="Extremely High Risk" />

            <TextView
                android:id="@+id/textSubRisk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="#faf1f1"
                android:textSize="25dp"
                android:textStyle="bold"
...
                android:textColor="#555"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/layoutRisk2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
...
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="12dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/textRisk1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="#faf1f1"
                    android:textSize="28dp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage"
                    tools:text="Extremely High Risk" />

                <TextView
                    android:id="@+id/textSubRisk2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="#faf1f1"
                    android:textSize="23dp"
                    android:textStyle="bold"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/textResult1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/result_top_margin"
                    android:gravity="center_vertical"
                    android:textColor="#444"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    tools:text="> 100" />

                <TextView
                    android:id="@+id/textUnit1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/mpn"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/textResult2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/result_top_margin"
                    android:gravity="center_vertical"
                    android:textColor="#444"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    tools:text="> 100" />

                <TextView
                    android:id="@+id/textUnit2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/mpn"
...

        <Button
            style="@style/Button"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:onClick="onNextClick"
            android:text="@string/next"
            android:theme="?primaryButtonStyle" />

    </LinearLayout>
</layout>
