<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) Stichting Akvo (Akvo Foundation)
  ~
  ~ This file is part of Akvo Caddisfly.
  ~
  ~ Akvo Caddisfly is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Akvo Caddisfly is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Akvo Caddisfly. If not, see <http://www.gnu.org/licenses/>.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="testInfoViewModel"
            type="org.akvo.caddisfly.viewmodel.TestInfoViewModel" />

        <variable
            name="testInfo"
            type="org.akvo.caddisfly.model.TestInfo" />

        <import type="android.view.View" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9">

            <ImageView
                android:id="@+id/imageBrand"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="false"
                android:contentDescription="@null"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                app:imageScale="@{testInfo.imageScale}"
                app:imageUrl="@{testInfo.image == null ? testInfo.brand : testInfo.image}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="5sp"
                android:onClick="onSiteLinkClick"
                android:paddingTop="25dp"
                android:paddingBottom="5dp"
                android:shadowColor="@color/white"
                android:shadowRadius="20"
                android:text="@{testInfo.brandUrl}"
                android:textColor="#00516D"
                android:visibility="@{testInfo.brandUrl.isEmpty() ? View.GONE : View.VISIBLE}"
                tools:text="www.website.link" />

            <org.akvo.caddisfly.widget.SwatchView
                android:id="@+id/swatchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="#ccffffff"
                android:visibility="gone" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/layoutNext"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:visibility="gone">

            <Button
                android:id="@+id/button_next"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:enabled="true"
                android:minWidth="230dp"
                android:onClick="onStartTestClick"
                android:text="@string/next"
                android:theme="?primaryButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPrepareSubmit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:visibility="visible">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_prepare"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:enabled="true"
                android:letterSpacing="0"
                android:minWidth="230dp"
                android:minHeight="65dp"
                android:onClick="onStartTestClick"
                android:text="@string/prepare_sample"
                android:textAllCaps="true"
                android:textColor="@color/button_green_selected"
                android:textSize="15sp"
                app:cornerRadius="3dp"
                app:strokeColor="@color/button_green_selected"
                app:strokeWidth="1dp"
                tools:targetApi="lollipop" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_phase_2"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/button_green"
                android:enabled="true"
                android:letterSpacing="0"
                android:minWidth="230dp"
                android:minHeight="65dp"
                android:onClick="onInstructionsClick"
                android:text="@string/submitResult"
                android:textAllCaps="true"
                android:textSize="15sp"
                app:cornerRadius="3dp"
                tools:targetApi="lollipop" />
        </LinearLayout>
    </LinearLayout>
</layout>